--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,14 @@
+2007-06-10  Bruno Haible  <bruno@clisp.org>
+
+	* printf-parse.c: Don't include config.h and the specification
+	header if PRINTF_PARSE is already defined. Eliminate the set of
+	parameters for WIDE_CHAR_VERSION; the user of this file must provide
+	them now. Include c-ctype.h.
+	(PRINTF_PARSE) [ENABLE_UNISTDIO]: Add code implementing the 'U'
+	directive and CHAR_T_ONLY_ASCII.
+	* printf.c: Include wprintf-parse.h. Define the set of parameters for
+	the WIDE_CHAR_VERSION.
+
 2007-06-07  Bruno Haible  <bruno@clisp.org>
 
 	* gettextP.h (gl_locale_name_canonicalize, gl_locale_name_posix,
