--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,3 +1,9 @@
+2007-09-01  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.am (archive.tar.gz): Provide an explicit error message if
+	archive.tar.gz cannot be found.
+	Reported by Spiros at <https://savannah.gnu.org/bugs/?16657>.
+
 2007-06-30  Bruno Haible  <bruno@clisp.org>
 
 	* autopoint.in (func_version): Use the standard --version output, see
