--- a/gettext-runtime/libasprintf/ChangeLog
+++ b/gettext-runtime/libasprintf/ChangeLog
@@ -1,3 +1,9 @@
+2007-09-01  Bruno Haible  <bruno@clisp.org>
+
+	* autosprintf.texi (Class autosprintf): Explain memory mangement
+	details.
+	Reported at <https://savannah.gnu.org/bugs/?17659>.
+
 2007-05-05  Bruno Haible  <bruno@clisp.org>
 
 	* autosprintf.texi (ifmakeinfo): Remove alias.
