--- a/gettext-runtime/libasprintf/autosprintf.texi
+++ b/gettext-runtime/libasprintf/autosprintf.texi
@@ -33,7 +33,7 @@
 This file provides documentation for GNU @code{autosprintf} library.
 
 @copying
-Copyright (C) 2002-2003 Free Software Foundation, Inc.
+Copyright (C) 2002-2003, 2006-2007 Free Software Foundation, Inc.
 
 This manual is free documentation.  It is dually licensed under the
 GNU FDL and the GNU GPL.  This means that you can redistribute this
@@ -63,7 +63,7 @@ A copy of the license is at @url{http://www.gnu.org/licenses/gpl.html}.
 @page
 @vskip 0pt plus 1filll
 @c @insertcopying
-Copyright (C) 2002-2003 Free Software Foundation, Inc.
+Copyright (C) 2002-2003, 2006-2007 Free Software Foundation, Inc.
 
 This manual is free documentation.  It is dually licensed under the
 GNU FDL and the GNU GPL.  This means that you can redistribute this
@@ -150,7 +150,10 @@ The constructor @code{autosprintf (const char *format, ...)} takes a format
 string and additional arguments, like the C function @code{printf}.
 
 Conversions to @code{char *} and @code{std::string} are defined that return
-the encapsulated string.
+the encapsulated string.  The conversion to @code{char *} returns a freshly
+allocated copy of the encapsulated string; it needs to be freed using
+@code{delete[]}.  The conversion to @code{std::string} returns a copy of
+the encapsulated string, with automatic memory management.
 
 The destructor @code{~autosprintf ()} destroys the encapsulated string.
 
