--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-01  Bruno Haible  <bruno@clisp.org>
+
+	* lib/linebreak.c.diff: Update.
+
 2007-08-18  Bruno Haible  <bruno@clisp.org>
 
 	* modules/fstrcmp: Remove file, moved to gnulib.
