--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,5 +1,20 @@
 2007-09-01  Bruno Haible  <bruno@clisp.org>
 
+	Implement msgctxt for Java ResourceBundles.
+	* x-java.c (init_keywords): Also register pgettext and npgettext.
+	(init_flag_table_java): Update accordingly.
+	* write-java.c (msgid_hashcode): New function.
+	(compute_hashsize, compute_table_items): Use it instead of string_hashcode.
+	(write_java_msgid): New function.
+	(write_java_code): Use it instead of write_java_string.
+	(msgdomain_write_java): Remove error message if mlp has entries with
+	context.
+	* gnu/gettext/DumpResource.java (dumpMessage): Emit an msgctxt line
+	if the message contain the context separator.
+	Suggested by Felix Berger.
+
+2007-09-01  Bruno Haible  <bruno@clisp.org>
+
 	* po-lex.c: Include uniwidth.h.
 
 2007-06-19  Bruno Haible  <bruno@clisp.org>
