--- a/gettext-runtime/intl-csharp/ChangeLog
+++ b/gettext-runtime/intl-csharp/ChangeLog
@@ -1,3 +1,9 @@
+2007-09-02  Bruno Haible  <bruno@clisp.org>
+
+	Implement msgctxt for C# ResourceManagers.
+	* intl.cs (GettextResourceManager): New methods GetParticularString,
+	GetParticularPluralString.
+
 2006-11-27  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.16.1 released.
