--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,10 @@
+2007-09-02  Bruno Haible  <bruno@clisp.org>
+
+	Implement msgctxt for C# ResourceManagers.
+	* gettext.texi (Java): Mention GetParticularString and
+	GetParticularPluralString.
+	* xgettext.texi (--keyword): Update defaults for C#.
+
 2007-09-01  Bruno Haible  <bruno@clisp.org>
 
 	Implement msgctxt for Java ResourceBundles.
