--- a/gettext-runtime/m4/ChangeLog
+++ b/gettext-runtime/m4/ChangeLog
@@ -1,3 +1,8 @@
+2007-09-08  Bruno Haible  <bruno@clisp.org>
+
+	* po.m4 (AM_PO_SUBDIRS): Define GETTEXT_MACRO_VERSION.
+	Suggested by Daniel Leidert <daniel.leidert@gmx.net>.
+
 2007-08-26  Bruno Haible  <bruno@clisp.org>
 
 	* intl.m4 (gl_INTL_SUBDIR_CORE): Avoid an "unused variable" warning
