--- a/gettext-runtime/po/ChangeLog
+++ b/gettext-runtime/po/ChangeLog
@@ -1,3 +1,11 @@
+2007-09-08  Bruno Haible  <bruno@clisp.org>
+
+	Check that the gettext macros and Makefile.in.in are in sync.
+	* Makefile.in.in (GETTEXT_MACRO_VERSION): New macro.
+	(check-macro-version): New target.
+	(all): Depend on it.
+	Suggested by Daniel Leidert <daniel.leidert@gmx.net>.
+
 2007-05-30  Bruno Haible  <bruno@clisp.org>
 
 	* pt.po: Update from Helder Correia <helder.pereira.correia@gmail.com>.
