--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,9 @@
+2007-09-09  Bruno Haible  <bruno@clisp.org>
+
+	* gettext.texi (Using Compendia): Use "msgattrib --no-obsolete"
+	instead of "sed -e '/^#~/d'".
+	Suggested by Benno Schulenberg <bensberg@justemail.net>.
+
 2007-09-02  Bruno Haible  <bruno@clisp.org>
 
 	* msggrep.texi: Add some examples.
