--- a/gettext-runtime/po/vi.po
+++ b/gettext-runtime/po/vi.po
@@ -1,18 +1,20 @@
 # Vietnamese Translation for Gettext Runtime.
-# Copyright © 2006 Free Software Foundation, Inc.
-# Clytie Siddall <clytie@riverland.net.au>, 2005-2006.
+# Copyright © 2007 Free Software Foundation, Inc.
+# Clytie Siddall <clytie@riverland.net.au>, 2005-2007.
 # 
 msgid ""
 msgstr ""
-"Project-Id-Version: gettext-runtime 0.15-pre5\n"
+"Project-Id-Version: gettext-runtime 0.16\n"
 "Report-Msgid-Bugs-To: bug-gnu-gettext@gnu.org\n"
-"POT-Creation-Date: 2006-10-02 16:24+0200\n"
-"PO-Revision-Date: 2006-07-09 21:07+0930\n"
+"POT-Creation-Date: 2007-05-13 21:44+0200\n"
+"PO-Revision-Date: 2007-06-13 22:03+0930\n"
 "Last-Translator: Clytie Siddall <clytie@riverland.net.au>\n"
 "Language-Team: Vietnamese <vi-VN@googlegroups.com> \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
+"X-Generator: LocFactoryEditor 1.6.3b1\n"
 
 #: gnulib-lib/closeout.c:67
 msgid "write error"
@@ -46,7 +48,7 @@ msgstr "%s: tùy chọn « %s » cần đến đối số\n"
 #: gnulib-lib/getopt.c:698 gnulib-lib/getopt.c:701
 #, c-format
 msgid "%s: unrecognized option `--%s'\n"
-msgstr "%s: chưa chấp nhận tùy chọn « --%s »\n"
+msgstr "%s: không nhận diện tùy chọn « --%s »\n"
 
 #: gnulib-lib/getopt.c:709 gnulib-lib/getopt.c:712
 #, c-format
@@ -79,12 +81,12 @@ msgstr "%s: tùy chọn « -W %s » là mơ hồ\n"
 msgid "%s: option `-W %s' doesn't allow an argument\n"
 msgstr "%s: tùy chọn « -W %s » không cho phép đối số\n"
 
-#: gnulib-lib/xmalloc.c:39
+#: gnulib-lib/xmalloc.c:38
 #, c-format
 msgid "memory exhausted"
 msgstr "hết bộ nhớ rồi"
 
-#: src/envsubst.c:114 src/gettext.c:135 src/ngettext.c:125
+#: src/envsubst.c:113 src/gettext.c:134 src/ngettext.c:124
 #, c-format, no-wrap
 msgid ""
 "Copyright (C) %s Free Software Foundation, Inc.\n"
@@ -92,74 +94,75 @@ msgid ""
 "warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.\n"
 msgstr ""
 "Tác quyền © %s của Tổ chức Phần mềm Tự do.\n"
-"Đây là phần mềm này tự do; hãy xem mã nguồn để tìm điều kiện sao chép.\n"
-"KHÔNG bảo đảm gì cả, dù KHẢ NĂNG BÁN hay KHẢ NĂNG LÀM VIỆC DỨT KHOÁT.\n"
+"Đây là phần mềm này tự do ; xem mã nguồn để tìm điều kiện sao chép.\n"
+"KHÔNG CÓ BẢO HÀNH GÌ CẢ, THẬM CHÍ KHÔNG CÓ BẢO ĐẢM ĐƯỢC NGỤ Ý\n"
+"KHẢ NĂNG BÁN HAY KHẢ NĂNG LÀM ĐƯỢC VIỆC DỨT KHOÁT.\n"
 
-#: src/envsubst.c:119 src/gettext.c:140 src/ngettext.c:130
+#: src/envsubst.c:118 src/gettext.c:139 src/ngettext.c:129
 #, c-format
 msgid "Written by %s.\n"
 msgstr "Tác giả: %s.\n"
 
 # Name: don't translate / Tên: đừng dịch
 #. This is a proper name. See the gettext manual, section Names.
-#: src/envsubst.c:119
+#: src/envsubst.c:118
 msgid "Bruno Haible"
 msgstr "Bruno Haible"
 
-#: src/envsubst.c:128 src/gettext.c:158 src/ngettext.c:142
+#: src/envsubst.c:127 src/gettext.c:157 src/ngettext.c:141
 #, c-format
 msgid "too many arguments"
 msgstr "quá nhiều đối số"
 
-#: src/envsubst.c:139 src/gettext.c:168 src/ngettext.c:154
+#: src/envsubst.c:138 src/gettext.c:167 src/ngettext.c:153
 #, c-format
 msgid "missing arguments"
-msgstr "thiếu đối số"
+msgstr "đối số còn thiếu"
 
-#: src/envsubst.c:172 src/gettext.c:239 src/ngettext.c:208
+#: src/envsubst.c:171 src/gettext.c:238 src/ngettext.c:207
 #, c-format
 msgid "Try `%s --help' for more information.\n"
 msgstr "Thử lệnh « %s --help » để xem thông tin thêm.\n"
 
-#: src/envsubst.c:177
+#: src/envsubst.c:176
 #, c-format, no-wrap
 msgid "Usage: %s [OPTION] [SHELL-FORMAT]\n"
-msgstr "Cách sử dụng: %s [TÙY_CHỌN] [DẠNG_THỨC_TRÌNH_BAO)]\n"
+msgstr "Cách sử dụng: %s [TÙY_CHỌN] [ĐỊNH_DẠNG_TRÌNH_BAO)]\n"
 
-#: src/envsubst.c:182
+#: src/envsubst.c:181
 #, c-format, no-wrap
 msgid "Substitutes the values of environment variables.\n"
 msgstr "Thay thế giá trị của biến môi trường.\n"
 
-#: src/envsubst.c:186
+#: src/envsubst.c:185
 #, c-format, no-wrap
 msgid "Operation mode:\n"
 msgstr "Chế độ thao tác:\n"
 
-#: src/envsubst.c:189
+#: src/envsubst.c:188
 #, c-format, no-wrap
 msgid "  -v, --variables             output the variables occurring in SHELL-FORMAT\n"
 msgstr ""
 " -v, --variables\n"
-"\txuất những _biến_ xảy ra trong DẠNG THỨC TRÌNH BAO\n"
+"\txuất những _biến_ xảy ra trong ĐỊNH DẠNG TRÌNH BAO\n"
 
-#: src/envsubst.c:193
+#: src/envsubst.c:192
 #, c-format, no-wrap
 msgid "Informative output:\n"
-msgstr "Xuất thông tin thêm:\n"
+msgstr "Kết xuất thông tin:\n"
 
-#: src/envsubst.c:196
+#: src/envsubst.c:195
 #, c-format, no-wrap
 msgid "  -h, --help                  display this help and exit\n"
 msgstr "  -h, --help                  hiện _trợ giúp_ này rồi thoát\n"
 
-#: src/envsubst.c:199
+#: src/envsubst.c:198
 #, c-format, no-wrap
 msgid "  -V, --version               output version information and exit\n"
 msgstr "  -V, --version               xuất thông tin _phiên bản_ rồi thoát\n"
 
 # Câu có đúng không? Câu dài, phúc tạp.
-#: src/envsubst.c:203
+#: src/envsubst.c:202
 #, c-format, no-wrap
 msgid ""
 "In normal operation mode, standard input is copied to standard output,\n"
@@ -171,41 +174,45 @@ msgid ""
 msgstr ""
 "Trong chế độ thao tác bình thường, thiết bị nhập chuẩn được sao chép\n"
 "sang thiết bị xuất chuẩn; mỗi tham chiếu đến biến môi trường có dạng\n"
-"$BIẾN hay ${BIẾN} được thay thế bằng giá trị tương ứng. Nếu DẠNG THỨC\n"
-"TRÌNH BAO được đưa ra, chỉ những biến môi trường được tham chiếu trong\n"
-"DẠNG THỨC TRÌNH BAO có được thay thế; không thì mọi tham chiếu biến\n"
-"môi trường xảy ra trong thiết bị nhập chuẩn có được thay thế.\n"
+"$BIẾN hay ${BIẾN} được thay thế bằng giá trị tương ứng. ĐỊNH DẠNG\n"
+"TRÌNH BAO đưa ra thì chỉ những biến môi trường đã tham chiếu trong\n"
+"ĐỊNH DẠNG TRÌNH BAO được thay thế; không thì mọi tham chiếu biến\n"
+"môi trường xảy ra trong thiết bị nhập chuẩn được thay thế.\n"
 
-#: src/envsubst.c:212
+#: src/envsubst.c:211
 #, c-format, no-wrap
 msgid ""
 "When --variables is used, standard input is ignored, and the output consists\n"
 "of the environment variables that are referenced in SHELL-FORMAT, one per line.\n"
 msgstr ""
 "Khi tùy chọn « --variables » (biến) được dùng, thiết bị nhập chuẩn bị bỏ qua,\n"
-"và kết xuất là những biến môi trường được tham chiếu trong DẠNG THỨC\n"
+"và kết xuất gồm có những biến môi trường được tham chiếu trong ĐỊNH DẠNG\n"
 "TRÌNH BAO, một điều trên mỗi dòng.\n"
 
-#: src/envsubst.c:216 src/gettext.c:276 src/ngettext.c:242
+#. TRANSLATORS: The placeholder indicates the bug-reporting address
+#. for this package.  Please add _another line_ saying
+#. "Report translation bugs to <...>\n" with the address for translation
+#. bugs (typically your translation team's web or email address).
+#: src/envsubst.c:219 src/gettext.c:279 src/ngettext.c:245
 msgid "Report bugs to <bug-gnu-gettext@gnu.org>.\n"
 msgstr "Hãy thông báo lỗi cho <bug-gnu-gettext@gnu.org>.\n"
 
-#: src/envsubst.c:439
+#: src/envsubst.c:442
 #, c-format
 msgid "error while reading \"%s\""
 msgstr "gặp lỗi khi đọc « %s »"
 
-#: src/envsubst.c:440
+#: src/envsubst.c:443
 msgid "standard input"
 msgstr "thiết bị nhập chuẩn"
 
 # Name: don't translate / Tên: đừng dịch
 #. This is a proper name. See the gettext manual, section Names.
-#: src/gettext.c:140 src/ngettext.c:130
+#: src/gettext.c:139 src/ngettext.c:129
 msgid "Ulrich Drepper"
 msgstr "Ulrich Drepper"
 
-#: src/gettext.c:244
+#: src/gettext.c:243
 #, c-format, no-wrap
 msgid ""
 "Usage: %s [OPTION] [[TEXTDOMAIN] MSGID]\n"
@@ -215,12 +222,12 @@ msgstr ""
 "hay:    %s [TÙY_CHỌN] -s [MSGID]...\n"
 
 # Trong văn cảnh này, ngôn ngữ "native" của ai?
-#: src/gettext.c:250
+#: src/gettext.c:249
 #, c-format, no-wrap
 msgid "Display native language translation of a textual message.\n"
-msgstr "Hiển thị bản dịch bằng ngôn ngữ mình của thông điệp thuộc văn bản.\n"
+msgstr "Hiển thị bản dịch ngôn ngữ mẹ đẻ của thông điệp thuộc văn bản.\n"
 
-#: src/gettext.c:254
+#: src/gettext.c:253
 #, c-format, no-wrap
 msgid ""
 "  -d, --domain=TEXTDOMAIN   retrieve translated messages from TEXTDOMAIN\n"
@@ -232,16 +239,16 @@ msgid ""
 "  [TEXTDOMAIN] MSGID        retrieve translated message corresponding\n"
 "                            to MSGID from TEXTDOMAIN\n"
 msgstr ""
-"  -d, --domain=MIỀN_VAN_BẢN   lấy các thông điệp được dịch từ miền này\n"
-"  -e                        hiệu lực mở rộng một số dãy thoát\n"
+"  -d, --domain=MIỀN_VAN_BẢN   lấy các thông điệp đã dịch từ miền này\n"
+"  -e                        bật mở rộng một số dãy thoát\n"
 "  -E                        (bị bỏ qua để tương thích)\n"
 "  -h, --help           \thiện _trợ giúp_ này rồi thoát\n"
 "  -n                        thu hồi ký tự dòng _mới_ theo sau\n"
 "  -V, --version     \thiện thông tin _phiên bản_ rồi thoát\n"
-"  [MIỀN_VAN_BẢN] MSGID        lấy thông điệp được dịch tương ứng với MSGID\n"
+"  [MIỀN_VAN_BẢN] MSGID        lấy thông điệp đã dịch tương ứng với MSGID\n"
 "\ttừ MIỀN_VAN_BẢN\n"
 
-#: src/gettext.c:265
+#: src/gettext.c:264
 #, c-format, no-wrap
 msgid ""
 "If the TEXTDOMAIN parameter is not given, the domain is determined from the\n"
@@ -253,31 +260,31 @@ msgid ""
 "found in the selected catalog are translated.\n"
 "Standard search directory: %s\n"
 msgstr ""
-"Nếu tham số MIỀN_VAN_BẢN không được đưa ra, miền được quyết định\n"
+"Tham số MIỀN_VAN_BẢN không đưa ra thì miền được quyết định\n"
 "từ biến môi trường TEXTDOMAIN (miền văn bản). Nếu không tìm thấy\n"
 "phân loại thông điệp trong thư mục bình thường, vị trí khác có thể được\n"
 "xác định bằng biến môi trường TEXTDOMAINDIR (thư mục của miền văn bản).\n"
-"Khi được dùng với tùy chọn « -s », chương trình này ứng xử giống như\n"
-"lệnh « echo ». Nhưng mà nó không phải đơn giản sao chép các đối số của mình\n"
-"sang thiết bị xuất chuẩn. Thay thế những thông điệp được tìm trong phân loại\n"
+"Khi dùng với tùy chọn « -s », chương trình này ứng xử giống như\n"
+"lệnh « echo ». Nhưng mà nó không phải đơn giản sao chép các đối số của nó\n"
+"sang thiết bị xuất chuẩn. Thay thế những thông điệp đã tìm trong phân loại\n"
 "được chọn có được dịch.\n"
 "Thư mục tìm kiếm chuẩn: %s\n"
 
-#: src/ngettext.c:213
+#: src/ngettext.c:212
 #, c-format, no-wrap
 msgid "Usage: %s [OPTION] [TEXTDOMAIN] MSGID MSGID-PLURAL COUNT\n"
-msgstr "Cách sử dụng: %s [TÙY_CHỌN] [MIỀN_VAN_BẢN] MSGID MSGID-PLURAL SỐ_ĐẾM\n"
+msgstr "Cách sử dụng: %s [TÙY_CHỌN] [MIỀN_VAN_BẢN] MSGID MSGID-NHIỀU SỐ_ĐẾM\n"
 
-#: src/ngettext.c:218
+#: src/ngettext.c:217
 #, c-format, no-wrap
 msgid ""
 "Display native language translation of a textual message whose grammatical\n"
 "form depends on a number.\n"
 msgstr ""
-"Hiển thị bản dịch bằng ngôn ngữ mình của thông điệp thuộc văn bản có dạng\n"
+"Hiển thị bản dịch ngôn ngữ mẹ đẻ của thông điệp thuộc văn bản có dạng\n"
 "ngữ pháp phụ thuộc vào con số.\n"
 
-#: src/ngettext.c:223
+#: src/ngettext.c:222
 #, c-format, no-wrap
 msgid ""
 "  -d, --domain=TEXTDOMAIN   retrieve translated message from TEXTDOMAIN\n"
@@ -289,16 +296,16 @@ msgid ""
 "  MSGID MSGID-PLURAL        translate MSGID (singular) / MSGID-PLURAL (plural)\n"
 "  COUNT                     choose singular/plural form based on this value\n"
 msgstr ""
-"  -d, --domain=MIỀN_VĂN_BẢN   lấy thông điệp được dịch từ _miền_ này\n"
-"  -e                        hiệu lực _mở rộng_ một số dãy thoát\n"
-"  -E                        (bị bỏ qua vì không tương thích)\n"
+"  -d, --domain=MIỀN_VĂN_BẢN   lấy thông điệp đã dịch từ _miền_ này\n"
+"  -e                        bật _mở rộng_ một số dãy thoát\n"
+"  -E                        (bị bỏ qua để không tương thích)\n"
 "  -h, --help          \thiện _trợ giúp_ này rồi thoát\n"
 "  -V, --version     \thiện thông tin _phiên bản_ rồi thoát\n"
-"  [MIỀN_VĂN_BẢN]    \tlấy thông điệp được dịch từ miền văn bản này\n"
-"  MSGID MSGID-PLURAL        dịch MSGID (số ít) / MSGID-PLURAL (số nhiều)\n"
-"  SỐ_ĐẾM            \tchọn dạng số ít hay số nhiều đựa vào giá trị này\n"
+"  [MIỀN_VĂN_BẢN]    \tlấy thông điệp đã dịch từ miền văn bản này\n"
+"  MSGID MSGID-NHIỀU        dịch MSGID (số ít) / MSGID-NHIỀU (số nhiều)\n"
+"  SỐ_ĐẾM            \tchọn dạng số ít/số nhiều dựa vào giá trị này\n"
 
-#: src/ngettext.c:234
+#: src/ngettext.c:233
 #, c-format, no-wrap
 msgid ""
 "If the TEXTDOMAIN parameter is not given, the domain is determined from the\n"
@@ -307,7 +314,7 @@ msgid ""
 "variable TEXTDOMAINDIR.\n"
 "Standard search directory: %s\n"
 msgstr ""
-"Nếu tham số MIỀN VĂN BẢN không được đưa ra, miền được quyết định\n"
+"Tham số MIỀN VĂN BẢN không đưa ra thì miền được quyết định\n"
 "từ biến môi trường TEXTDOMAIN (miền văn bản). Nếu không tìm thấy\n"
 "phân loại thông điệp trong thư mục bình thường, vị trí khác có thể được\n"
 "xác định bằng biến môi trường TEXTDOMAINDIR (thư mục của miền văn bản).\n"
