--- a/gettext-tools/examples/ChangeLog
+++ b/gettext-tools/examples/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-15  Bruno Haible  <bruno@clisp.org>
+
+	* po/vi.po: Update from Clytie Siddall <clytie@riverland.net.au>.
+
 2007-06-07  Bruno Haible  <bruno@clisp.org>
 
 	* hello-*/autoclean.sh: Remove also intlmacosx.m4.
