--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-09-29  Bruno Haible  <bruno@clisp.org>
+
+	* autogen.sh (GNULIB_CVS_ROOT): Change to read-only git mirror
+	valid since 2007-09-19.
+
 2007-09-01  Bruno Haible  <bruno@clisp.org>
 
 	* autogen.sh (GNULIB_MODULES_TOOLS_FOR_SRC,
