--- a/gettext-tools/ChangeLog
+++ b/gettext-tools/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-30  Bruno Haible  <bruno@clisp.org>
+
+	* woe32dll/gettextsrc-exports.c: Add formatstring_kde.
+
 2007-07-07  Bruno Haible  <bruno@clisp.org>
 
 	* configure.ac: Don't create libuniname/Makefile.
