--- a/gettext-tools/libgettextpo/ChangeLog
+++ b/gettext-tools/libgettextpo/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-30  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.am (libgettextpo_la_AUXSOURCES): Add format-kde.c.
+
 2007-06-08  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.am (LDADD): Remove variable.
