Support for KDE format strings.

--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,9 @@ Version 0.16.2 - January 2007
 * Programming languages support:
   - Contexts (msgctxt) are now also supported for Java and C#.
   - C# with Qt: The support for Qt format strings has been updated for Qt 4.
+  - C++ with KDE:
+    xgettext has a new option --kde that triggers the recognition and marking
+    of KDE 4 format strings.
 
 * Documentation:
   The "Users" chapter has been completely rewritten.
