--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,8 @@
 Version 0.16.2 - January 2007
 
 * PO file format:
-  The Project-Id field in the header entry may now already be filled in the
-  POT file. In this case, the translators don't need to fill it in.
+  The Project-Id-Version field in the header entry may now already be filled
+  in the POT file. In this case, the translators don't need to fill it in.
   xgettext has new options --package-name and --package-version that allow
   to specify the package name and version from a Makefile.
 
