--- a/gettext-tools/po/ChangeLog
+++ b/gettext-tools/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-09-30  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.in.in ($(DOMAIN).pot-update): Pass the package name and
+	version to xgettext.
+
 2007-09-19  Bruno Haible  <bruno@clisp.org>
 
 	* eu.po: New file, from Piarres Beobide <pi@beobide.net>.
