--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-10-01  Bruno Haible  <bruno@clisp.org>
+
+	* build-aux/depcomp: New file, from automake-1.10. Needed for the
+	gettext-tools/gnulib-tests directory.
+
 2007-09-29  Bruno Haible  <bruno@clisp.org>
 
 	* autogen.sh (GNULIB_CVS_ROOT): Change to read-only git mirror
