--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,3 +1,8 @@
+2007-10-01  Bruno Haible  <bruno@clisp.org>
+
+	* tests/test-term-ostream-xterm.out: Update expected result after
+	code changes on 2006-12-23.
+
 2007-09-29  Bruno Haible  <bruno@clisp.org>
 
 	* modules/fnmatch.diff: Update.
