Update lock.m4 from gnulib.

--- a/gettext-runtime/m4/ChangeLog
+++ b/gettext-runtime/m4/ChangeLog
@@ -1,3 +1,16 @@
+2007-09-12  Bruno Haible  <bruno@clisp.org>
+
+	* lock.m4: Don't provide an AC_USE_SYSTEM_EXTENSIONS definition.
+	(gl_LOCK_EARLY_BODY): Use AC_GNU_SOURCE when AC_USE_SYSTEM_EXTENSIONS
+	is not defined.
+
+2007-09-12  Eric Blake  <ebb9@byu.net>
+
+	* lock.m4 (gl_LOCK_EARLY_BODY): AC_GNU_SOURCE will be obsolete in
+	Autoconf 2.62; use AC_USE_SYSTEM_EXTENSIONS instead, but provide
+	fallback, so that lock.m4 can be used in gettext without extensions
+	module.
+
 2007-09-08  Bruno Haible  <bruno@clisp.org>
 
 	* po.m4 (AM_PO_SUBDIRS): Define GETTEXT_MACRO_VERSION.
