--- a/gettext-runtime/libasprintf/ChangeLog
+++ b/gettext-runtime/libasprintf/ChangeLog
@@ -1,3 +1,8 @@
+2007-09-04  Bruno Haible  <bruno@clisp.org>
+
+	* alloca.in.h: Renamed from alloca_.h.
+	* Makefile.am (EXTRA_DIST, alloca.h): Update.
+
 2007-09-01  Bruno Haible  <bruno@clisp.org>
 
 	* autosprintf.texi (Class autosprintf): Explain memory mangement
