--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,3 +1,8 @@
+2007-10-04  Bruno Haible  <bruno@clisp.org>
+
+	* lib/alloca.in.h: Renamed from lib/alloca_.h.
+	* Makefile.am (EXTRA_DIST): Update.
+
 2007-10-01  Bruno Haible  <bruno@clisp.org>
 
 	* tests/test-term-ostream-xterm.out: Update expected result after
