--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,5 +1,16 @@
 2007-10-04  Bruno Haible  <bruno@clisp.org>
 
+	* lib/glib/ghash.in.h: Renamed from lib/glib/ghash_.h.
+	* lib/glib/glist.in.h: Renamed from lib/glib/glist_.h.
+	* lib/glib/gprimes.in.h: Renamed from lib/glib/gprimes_.h.
+	* lib/glib/gstrfuncs.in.h: Renamed from lib/glib/gstrfuncs_.h.
+	* lib/glib/gstring.in.h: Renamed from lib/glib/gstring_.h.
+	* lib/glib/gtypes.in.h: Renamed from lib/glib/gtypes_.h.
+	* lib/glib.in.h: Renamed from lib/glib_.h.
+	* lib/glibconfig.in.h: Renamed from lib/glibconfig_.h.
+	* modules/libglib (Files, Makefile.am): Update.
+	* Makefile.am (EXTRA_DIST): Update.
+
 	* lib/getopt.in.h.diff: Renamed from lib/getopt_.h.diff.
 	* Makefile.am (EXTRA_DIST): Update.
 
