--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,3 +1,11 @@
+2007-03-30  Bruno Haible  <bruno@clisp.org>
+
+	* alloca.in.h: Change prefix of double-inclusion guard macro to _GL_.
+
+2006-06-19  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* alloca.in.h (alloca) [defined alloca]: Don't define or declare.
+
 2007-10-04  Bruno Haible  <bruno@clisp.org>
 
 	* lib/libxml/c14n.in.h: Renamed from lib/libxml/c14n_.h.
