--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-10-06  Bruno Haible  <bruno@clisp.org>
+
+	* build-aux/texinfo.tex: Upgrade to texinfo-4.11.
+	Needed because the original texinfo.tex does not support the
+	@documentencoding macro and the texinfo-4.11 texi2dvi then fails due to
+	this.
+
 2007-10-05  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.am (distcheck-hook): Update check of relocatable.h,
