--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,8 @@
+2007-10-09  Bruno Haible  <bruno@clisp.org>
+
+	* xgettext-c-17: New file.
+	* Makefile.am (TESTS): Add it.
+
 2007-10-07  Bruno Haible  <bruno@clisp.org>
 
 	* tstgettext.c (main): In the --version output, say GPLv3+.
